# LineSoccer

./: .clang-format  .gitignore  CMakeLists.txt  LineSoccer.sln  main.cpp
LineSoccer/: AgentLogic.cpp  AgentLogic.h  Arrow.h  Arrows.cpp  Arrows.h  Button.h  Debug.cpp  FieldLogic.cpp  FieldLogic.h  FieldVisualization.cpp  FieldVisualization.h  FullTreeAgent.cpp  FullTreeAgent.h  GameLogic.cpp  GameLogic.h  GameRuler.cpp  GameRuler.h  InputController.cpp  InputController.h  LineSoccer.vcxproj  LineSoccer.vcxproj.filters  LinkedList.cpp  LinkedList.h  Logic.cpp  Logic.h  MapNode.cpp  MapNode.h  Move.h  Movement.h  Player.h  PlayerLogic.cpp  PlayerLogic.h  RandomAgent.cpp  RandomAgent.h  UI.cpp  UI.h  game.cpp  game.h  main.cpp  node.h  (+4 more)
field/: MapNode.h  field_logic.cpp  field_logic.hpp  old_FieldLogic.cpp  old_FieldLogic.h
include/: bit_set.h  field_logic.h  field_logic.hpp  field_visualizer.h  game_logic.h  game_rendering.h
input_handler/: InputController.cpp  InputController.h  UI.cpp  UI.h
logic/: FieldLogic.cpp  FieldLogic.h  GameLogic.cpp  GameLogic.h  Move.h
player/: AgentLogic.cpp  AgentLogic.h  FullTreeAgent.cpp  FullTreeAgent.h  Player.h  RandomAgent.cpp  RandomAgent.h
src/: field_logic.cpp  field_visualizer.cpp  game_logic.cpp  game_rendering.cpp  main.cpp
utils/: Debug.cpp  LinkedList.cpp  LinkedList.h  bit_set.hpp  node.h  stack.cpp  stack.h
visualization/: Button.h  FieldVisualization.cpp  FieldVisualization.h  visualization.cpp  visualization.h
